feat(cache): 实现多级缓存并优化用户登录逻辑
- 新增 CacheConfig 配置类，设置 Caffeine 缓存
- 添加 CacheException 异常类处理缓存相关错误
- 新增 CacheClient 管理类，实现本地和 Redis 缓存的查询、更新和失效- 重构 UserServiceImpl，使用 CacheClient 替代直接操作 Redis- 优化用户登录逻辑，采用缓存机制存储登录状态
- 更新 PictureServiceImpl 中的图片编辑和更新逻辑
- 删除 App.vue 和 PictureUploadRequest 中的冗余注释
- 更新项目依赖，包括 Spring Boot、Java 版本和新增缓存相关库